# team

./: .change_tracking_state.json  .env.example  .env.full_stack  .env.postgres  .gitignore  AGENT_COOPERATION_NETWORK_STATUS.md  AGENT_PROTOCOLS_UPDATED.md  AGENT_SPECIFIC_MEMORY.md  ALEKSANDER_CONTINUOUS_MONITORING_PROTOCOL.md  ALEKSANDER_HELENA_PAIR_PATTERN.md  ANALYTICAL_TEAM_FINAL_STATUS.md  ANALYTICAL_TEAM_HANDOFF_TO_HELENA.md  ANALYTICAL_TEAM_RESEARCH_CLAUDE_SDK.md  ANALYTICAL_TOOLKITS_DEEP_DIVE.md  ARCHITECTURE_EXPLAINED.md  BATCH_MIGRATION_PLAN.md  BEZPIECZENSTWO_PL.md  CBA_PROFESSIONAL_ANALYSIS_FINAL.md  CBA_PROFESSIONAL_ANALYSIS_REPORT.md  CLEANUP_AFTER_EVALUATION.sh  COMPLETE_SYSTEM_OVERVIEW.md  COMPREHENSIVE_STATUS_REPORT.md  DASHBOARD_DEMO.md  DATA_LOADING_PROTOCOL.md  DATA_ROUTING_EXPLAINED.md  DAY_1_SUMMARY_2025_11_02.md  DAY_2_FINAL_STATUS.md  DAY_2_PRE_FLIGHT_CHECKLIST.md  DAY_2_SMOKE_TESTS.py  DOGFOODING_COMPLETE_SUMMARY.md  DOGFOODING_DAY1_PROOF.md  ELENA_OSINT_SOURCES_VERIFIED.md  ENHANCEMENT_ROADMAP.md  EPIC_SESSION_SUMMARY.txt  EVALUATION_ANSWER_CONTEXT_CAPACITY.md  EVALUATION_CHECKLIST.md  EVALUATION_REPORT_v5.md  EVALUATION_SUMMARY_NOTES.md  EVALUATION_TEAM_ANALYSIS.md  EVALUATION_TEST_PLAN.md  (+173 more)
destiny-cli/: DESTINY_MEMORY_FINAL_SUMMARY.md  INSTALLATION_GUIDE.md  MEMORY_IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml  requirements.txt  setup.py
destiny-cli/artifacts/: ARCHITECTURE_CLI_TOOLS.md  CLI_FRAMEWORKS_RESEARCH.md  IMPLEMENTATION_PLAN_DAY1.md  PRD_DESTINY_CLI_TOOLS.md  UX_DESIGN_CLI_TOOLS.md
destiny-cli/destiny_cli/: __init__.py  (+1 more)
(+1069 files in other folders)
